# fstat

./: CMakeLists.txt  Main.cpp  Makefile  fstat.rc  manual.tjs  readme.txt
